--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "drawFigures": {
+    "drawShapes": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/drawFigures",
+            "outputPath": "dist/drawShapes",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -67,18 +67,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "drawFigures:build"
+            "browserTarget": "drawShapes:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "drawFigures:build:production"
+              "browserTarget": "drawShapes:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "drawFigures:build"
+            "browserTarget": "drawShapes:build"
           }
         },
         "test": {
@@ -116,18 +116,18 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "drawFigures:serve"
+            "devServerTarget": "drawShapes:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "drawFigures:serve:production"
+              "devServerTarget": "drawShapes:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "drawFigures",
+  "defaultProject": "drawShapes",
   "cli": {
     "analytics": false
   }
